# magicformulabr

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml  publish.yml
src/: __init__.py  __version__.py  magicformulabr.py
src/magicformulabr/: __init__.py  main.py
tests/: test_magicformula_calc_rank.py
